--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.1",
     "react-scroll": "^1.9.0",
+    "react-simple-maps": "^3.0.0",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.3"
   },
