--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-router-dom": "^6.21.1",
     "react-scroll": "^1.9.0",
     "react-simple-maps": "^3.0.0",
+    "react-simple-typewriter": "^5.0.1",
+    "react-ts-typewriter": "^0.1.8-b",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.3"
   },
