--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^9.93.0",
+    "@react-three/fiber": "^8.15.13",
     "gsap": "^3.12.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -24,7 +26,8 @@
     "react-ts-typewriter": "^0.1.8-b",
     "sort-by": "^1.2.0",
     "split-text-js": "^1.0.3",
-    "styled-components": "^6.1.3"
+    "styled-components": "^6.1.3",
+    "three": "^0.160.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
