some problem is solved

--- a/package.json
+++ b/package.json
@@ -18,15 +18,18 @@
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.7",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.4",
     "react-headroom": "^3.2.1",
     "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.1",
     "react-scroll": "^1.9.0",
-    "react-simple-maps": "^3.0.0",
+    "react-simple-maps": "^1.0.0",
     "react-simple-typewriter": "^5.0.1",
     "react-ts-typewriter": "^0.1.8-b",
-    "sort-by": "^1.2.0",
+    "react-use": "^17.5.0",
+    "react-use-scroll-position": "^2.0.0",
+    "sort-by": "^0.0.2",
     "split-text-js": "^1.0.3",
     "styled-components": "^6.1.3",
     "three": "^0.160.0"
