--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^4.4.1",
     "@react-three/drei": "^9.93.0",
     "@react-three/fiber": "^8.15.13",
+    "firebase": "^10.13.0",
     "gsap": "^3.12.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
